# Deep-Live-Cam

./: .deepsource.toml  .editorconfig  .flashenv  .gitattributes  .gitignore  .yml  AGENTS.md  Anna  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeepLiveCam.lnk  Dockerfile  Elon musk  Emmy Me  Henry live cam  INSTALL_MACOS.md  LICENSE  Lizbeth Lopez  MACOS_DEPLOYMENT_GUIDE_VI.md  MUDANCAS_NATURAL_480P.md  NATURAL_LOOK_GUIDE.md  OPTIMIZATIONS_MACOS.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  Peace  QUICKSTART_MACOS.md  README.md  README_VI_M1.md  REVIEW_TODOS.md  Sketch  Somtex  Travis Craig  VID  Virtual-Cam.md  WINDOWS.md  Xadi deep live  accord  automation.txt  benchmark.py  (+60 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
devdocs/: live-webcam-perf-correlation-2026-06-25.csv  live-webcam-perf-correlation-2026-06-25.md
docs/: TODO.md  anti-patterns.md  performance-analysis-m4-pro.md
fork osato12ey/: Deep-Live-Cam,
google-colab/: DeepLive_Google_Colab.ipynb  Deep_Live_Cam_Remote_Batch.ipynb  Deep_Live_Cam_Remote_Batch.py
locales/: ar.json  de.json  es.json  fi.json  he.json  id.json  km.json  ko.json  pt-br.json  ru.json  sd.json  th.json  ur.json  zh.json
models/: instructions.txt
modules/: __init__.py  _image_sizing.py  blas_check.py  camera_detection.py  capturer.py  cluster_analysis.py  core.py  coreml_session.py  custom_types.py  face_analyser.py  face_tracker.py  fake_face_handler.py  gettext.py  globals.py  gpu_processing.py  hair_segmenter.py  live_face_swapper.py  metadata.py  mlx_inswapper.py  model_loader.py  mps_session.py  onnx_optimize.py  performance_manager.py  performance_optimizer.py  platform_info.py  predicter.py  rife_interpolation.py  run.py  tkinter_fix.py  typing.py  ui (2).py  ui.json  ui.py  ui_analysis.py  ui_mapper.py  ui_webcam.py  utilities.py  video_capture.py  (+1 more)
(+117 files in other folders)
